[metadata]
name = mort-server
description = The Server for Mort

[options]
install_requires =
    fastapi == 0.78.0
    uvicorn == 0.17.6
    gunicorn == 20.1.0
    sqlalchemy == 1.4.37
    alembic == 1.8.0
    tenacity == 8.0.1
    bcrypt == 3.2.2
    pyjwt == 2.4.0


[options.extras_require]
tests =
    pytest == 7.1.2
    pytest-cov == 3.0.0
    black == 22.3.0
    flake8 == 4.0.1
    mypy == 0.961
    isort == 5.10.1
    sqlalchemy-stubs == 0.4

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
profile=black

[mypy]
plugins = pydantic.mypy, sqlmypy
disallow_untyped_defs = True

[flake8]
max-line-length = 88
exclude =.git,__pycache__,__init__.py,.mypy_cache,.pytest_cache

[mypy-tests.*]
ignore_errors = True